10-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-node
  namespace: hello-node
spec:
  selector:
    matchLabels:
      app: hello-node
  template:
    metadata:
      labels:
        app: hello-node
    spec:
      containers:
      - command:
        - /agnhost
        - netexec
        - --http-port=8080
        image: registry.k8s.io/e2e-test-images/agnhost:2.53
        name: agnhost
