10-gateways.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: hello-node
  namespace: hello-node
spec:
  selector:
    app: istio-ingress
  servers:
  - hosts:
    - "./*"
    port:
      name: http2
      number: 80
      protocol: HTTP2
