10-virtualservices.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: bookinfo
  namespace: bookinfo
spec:
  hosts:
  - bookinfo.local
  gateways:
  - bookinfo-gateway
  http:
  - name: bookinfo
    route:
    - destination:
        host: productpage
        port:
          number: 9080
